--- a/site/20210731.html
+++ b/site/20210731.html
@@ -13,7 +13,7 @@
         <meta property="og:type" content="website">
         <meta property="og:title" content="Acambaro Opina">
         <meta property="og:description" content="¿En qué consiste la Consulta Popular Enjuiciamiento a los expresidentes? ">
-        <meta property="og:image" content="http://www.acambaroopina.com/img/preview/20210731.jpg">
+        <meta property="og:image" content="http://www.acambaroopina.com/img/preview/20210731-1.jpg">
 
         <!-- Twitter Meta Tags -->
         <meta name="twitter:card" content="summary_large_image">
@@ -21,7 +21,7 @@
         <meta property="twitter:url" content="http://www.acambaroopina.com/site/20210731">
         <meta name="twitter:title" content="Acambaro Opina">
         <meta name="twitter:description" content="¿En qué consiste la Consulta Popular Enjuiciamiento a los expresidentes? ">
-        <meta name="twitter:image" content="http://www.acambaroopina.com/img/preview/20210423.jpg">
+        <meta name="twitter:image" content="http://www.acambaroopina.com/img/preview/20210423-1.jpg">
 
         <!-- Meta Tags Generated via https://www.opengraph.xyz -->
         <script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=6083637a9df64e001830176a&product=inline-share-buttons" async="async"></script>
@@ -49,7 +49,7 @@
                 <div id="Note">
                     <h2>¿En qué consiste la Consulta Popular Enjuiciamiento a los expresidentes? </h2>
                     <h3>31 de Julio del 2021</h3>
-                    <img src="../img/20210731-1.jpg">
+                    <img src="../img/20210731.jpg">
                     <p>
 El objetivo de la consulta popular es juntar 37 millones de votos en todo el país. <br>
 <span class="fw-bold">¿En que consiste?</span> <br>
