--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div id="Main">
                 <div id="Card3" class="Cards">
                     <h3>4 de Mayo del 2021</h3>
-                    <a href="site/20210731.html"><img class="ImgCard" src="img/20210731-1.jpg" alt="Undefine">
+                    <a href="site/20210731.html"><img class="ImgCard" src="img/20210731.jpg" alt="Undefine">
                         <h2 class="Subtitle">¿En qué consiste la Consulta Popular Enjuiciamiento a los expresidentes?</h2>
                         <p class="DemoText">El objetivo de la consulta popular es juntar 37 millones de votos en todo el país.<br> <span>Seguir Leyendo...</span></p>
                     </a>
